ZODB Requires:
~~~~~~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- adding shortcut keys 
  Alt-H -> home
  Alt-E -> folder_contents
  Alt-N -> folder_factories ie content creation
Bug fixes:
~~~~~~~~~~
- made some tree box options accessible only to site managers
- changed appearance of some tree box hierarchy items
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Installer set up services if they are.
- Updates et workaround to enable writing of unit tests.i
- Favorites are now offered only if CPSDocument/Link is installed
- document commenting disaplay call moved from CPSDocument to CPSDefault
- Export of boxes definition to Python dictionnary from the ZMI.