@@ -7,6 +7,8 @@ New features:
   Alt-H -> home
   Alt-E -> folder_contents
   Alt-N -> folder_factories ie content creation
+- It is now possible to revert to an archived version from the history view.
+  (Works correctly only for single-language documents.)
 Bug fixes:
 ~~~~~~~~~~
 - made some tree box options accessible only to site managers
